fix: enhance session management error handling
- Improved session management in AuthenticationController
- Added error handling for IllegalStateException during session setup
- Renamed createUserSession to setupUserSession for clarity
- Enhanced logging and error messages for better debugging
- Prevents crashes when session is already invalidated by Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,4 +58,6 @@ app.security.cors.allow-credentials=true
 # Logging
 logging.level.quest.gekko.wallet=INFO
 logging.level.org.springframework.security=WARN
+logging.level.org.springframework.security.web.session=DEBUG
+logging.level.org.apache.catalina.session=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
