--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,3 +61,13 @@ logging.level.org.springframework.security=WARN
 logging.level.org.springframework.security.web.session=DEBUG
 logging.level.org.apache.catalina.session=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Enable mail debugging
+logging.level.org.springframework.mail=DEBUG
+logging.level.javax.mail=DEBUG
+logging.level.com.sun.mail=DEBUG
+logging.level.quest.gekko.wallet.service.EmailService=DEBUG
+
+# Enable JavaMail session debugging
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.debug=true
