fix: disable email debugging after resolving provider issues
Disable SMTP debug logging and JavaMail session debugging in
application.properties. Email delivery issues were resolved -
problem was with hosting provider's mail servers, not application code.
Debug code remains available for future troubleshooting.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,11 +63,11 @@ logging.level.org.apache.catalina.session=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # Enable mail debugging
-logging.level.org.springframework.mail=DEBUG
-logging.level.javax.mail=DEBUG
-logging.level.com.sun.mail=DEBUG
-logging.level.quest.gekko.wallet.service.EmailService=DEBUG
+#logging.level.org.springframework.mail=DEBUG
+#logging.level.javax.mail=DEBUG
+#logging.level.com.sun.mail=DEBUG
+#logging.level.quest.gekko.wallet.service.EmailService=DEBUG
 
 # Enable JavaMail session debugging
-spring.mail.properties.mail.debug=true
-spring.mail.properties.mail.smtp.debug=true
+spring.mail.properties.mail.debug=false
+spring.mail.properties.mail.smtp.debug=false
