--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# src/main/resources/application.properties - UPDATED for Render + Cloudflare
+
 # Application Configuration
 spring.application.name=wallet
 
@@ -14,12 +16,25 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Session Configuration
+# Session Configuration - CRITICAL for Render + Cloudflare
 server.servlet.session.timeout=30m
 server.servlet.session.cookie.http-only=true
+# Dynamic secure cookie setting based on environment
 server.servlet.session.cookie.secure=${SESSION_COOKIE_SECURE:true}
-server.servlet.session.cookie.same-site=strict
+server.servlet.session.cookie.same-site=${SESSION_COOKIE_SAME_SITE:lax}
 server.servlet.session.tracking-modes=cookie
+# Important: This helps with Cloudflare proxy
+server.servlet.session.cookie.path=/
+server.servlet.session.cookie.domain=${SESSION_COOKIE_DOMAIN:}
+
+# Server Configuration for Render deployment
+server.port=${PORT:8080}
+# Trust Cloudflare proxy headers
+server.tomcat.remoteip.remote-ip-header=CF-Connecting-IP
+server.tomcat.remoteip.protocol-header=X-Forwarded-Proto
+server.tomcat.remoteip.port-header=X-Forwarded-Port
+# Cloudflare IP ranges (these are trusted proxies)
+server.tomcat.remoteip.trusted-proxies=173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/13,104.24.0.0/14,172.64.0.0/13,131.0.72.0/22
 
 # Security Configuration
 server.error.include-stacktrace=never
@@ -49,25 +64,46 @@ app.vault.max-password-name-length=100
 app.security.failed-attempts.max=5
 app.security.account-lock.duration-minutes=30
 
-# CORS Configuration
-app.security.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:https://wallet.gekko.quest,http://localhost:8080}
-app.security.cors.allowed-methods=GET,POST
+# Cloudflare Configuration
+app.cloudflare.enabled=${CLOUDFLARE_ENABLED:true}
+
+# CORS Configuration - Environment specific
+app.security.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:https://wallet.gekko.quest,https://*.onrender.com}
+app.security.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 app.security.cors.allowed-headers=*
 app.security.cors.allow-credentials=true
 
-# Logging
+# Logging Configuration
 logging.level.quest.gekko.wallet=INFO
 logging.level.org.springframework.security=WARN
 logging.level.org.springframework.security.web.session=DEBUG
 logging.level.org.apache.catalina.session=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
-# Enable mail debugging
-#logging.level.org.springframework.mail=DEBUG
-#logging.level.javax.mail=DEBUG
-#logging.level.com.sun.mail=DEBUG
+# Production vs Development settings
+# In production (Render), these will be overridden by environment variables
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
+
+# Development specific settings (when profile is 'dev')
+#---
+#spring.config.activate.on-profile=dev
+#server.servlet.session.cookie.secure=false
+#server.servlet.session.cookie.same-site=strict
+#app.security.cors.allowed-origins=http://localhost:8080,http://127.0.0.1:8080
+#app.cloudflare.enabled=false
+#logging.level.quest.gekko.wallet=DEBUG
+
+# Production specific settings (when profile is 'prod')
+#---
+#spring.config.activate.on-profile=prod
+#server.servlet.session.cookie.secure=true
+#server.servlet.session.cookie.same-site=lax
+# Enable debug for troubleshooting in production if needed
 #logging.level.quest.gekko.wallet.service.EmailService=DEBUG
 
-# Enable JavaMail session debugging
-spring.mail.properties.mail.debug=false
-spring.mail.properties.mail.smtp.debug=false
+# Render specific environment detection
+#---
+#spring.config.activate.on-profile=render
+#server.servlet.session.cookie.secure=true
+#server.servlet.session.cookie.same-site=lax
+#app.cloudflare.enabled=true
