Update env example and Docker config

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,32 @@
-SPRING_DATA_MONGODB_URI=URI_HERE
+# ===== SESSION COOKIE CONFIGURATION =====
+SESSION_COOKIE_SECURE=true
+SESSION_COOKIE_SAME_SITE=lax
+SESSION_COOKIE_DOMAIN=
+# ↑ Leave SESSION_COOKIE_DOMAIN empty (no value)
+
+# ===== SPRING CONFIGURATION =====
+SPRING_PROFILES_ACTIVE=prod
+
+# ===== CLOUDFLARE CONFIGURATION =====
+CLOUDFLARE_ENABLED=true
+
+# ===== CORS CONFIGURATION =====
+CORS_ALLOWED_ORIGINS=DOMAIN(S)_HERE
+
+# ===== DATABASE CONFIGURATION =====
+SPRING_DATA_MONGODB_URI=MONGODB_URI_HERE
+
+# ===== EMAIL CONFIGURATION =====
 SPRING_MAIL_HOST=HOST_HERE
 SPRING_MAIL_PORT=PORT_HERE
 SPRING_MAIL_USERNAME=USERNAME_HERE
 SPRING_MAIL_PASSWORD=PASSWORD_HERE
+
+# ===== APPLICATION CONFIGURATION =====
+APP_NAME=APP_NAME_HERE
+APP_SUPPORT_EMAIL=APP_SUPPORT_EMAIL_HERE
+
+# ===== IF USING RENDER, THEY AUTOMATICALLY SET THESE =====
+# PORT=10000 (or whatever port Render assigns)
+# RENDER_SERVICE_ID=srv-xxxxxxxxxxxxx
+# IS_RENDER=true
