--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -99,7 +99,7 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 #server.servlet.session.cookie.secure=true
 #server.servlet.session.cookie.same-site=lax
 # Enable debug for troubleshooting in production if needed
-#logging.level.quest.gekko.wallet.service.EmailService=DEBUG
+#logging.level.quest.gekko.wallet.common.email.service.EmailService=DEBUG
 
 # Render specific environment detection
 #---
