fix: improve bot request handling and reduce log noise
- Add 404 handlers for missing resources
- Implement bot detection using pre-defined Set lookup
- Log bot requests at DEBUG instead of ERROR level

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-# src/main/resources/application.properties - UPDATED for Render + Cloudflare
-
 # Application Configuration
 spring.application.name=wallet
 
@@ -16,7 +14,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Session Configuration - CRITICAL for Render + Cloudflare
+# Session Configuration
 server.servlet.session.timeout=30m
 server.servlet.session.cookie.http-only=true
 # Dynamic secure cookie setting based on environment
