feat: add username support and security alerts
- Add optional username field to password entries
- Rename 'name' field to 'serviceName' for clarity
- Implement security alert system:
  * Failed master password attempts
  * Login from new IP addresses
  * Rate limiting violations
  * Unauthorized vault access attempts
  * Account creation notifications
  * Multiple failed verification attempts
- Enhance search to work across service names and usernames
- Update UI to display service name + username
- Fix ApplicationProperties configuration mapping
- Update all DTOs, services, and templates for username support
- Maintain backward compatibility with existing password entries

Breaking changes:
- Database field 'name' renamed to 'serviceName' (migration required)
- API requests now include 'serviceName' and 'username' fields"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,10 +57,42 @@ app.security.rate-limit.code-verify.per-minute=5
 # Vault Settings
 app.vault.max-passwords-per-user=1000
 app.vault.max-password-name-length=100
+app.vault.max-username-length=200
+
+# Vault Security Settings
+app.vault.security.max-failed-unlock-attempts=5
+app.vault.security.unlock-attempt-window-minutes=15
+app.vault.security.alert-on-unauthorized-access=true
+app.vault.security.alert-on-vault-limit-reached=true
 
 # Security Settings
 app.security.failed-attempts.max=5
+app.security.failed-attempts.max-verification-attempts=5
+app.security.failed-attempts.max-unlock-attempts=5
 app.security.account-lock.duration-minutes=30
+
+# Security Alerts Configuration
+app.security.alerts.enabled=true
+app.security.alerts.send-on-failed-login=true
+app.security.alerts.send-on-new-ip-login=true
+app.security.alerts.send-on-rate-limit=true
+app.security.alerts.send-on-vault-breach=true
+app.security.alerts.send-on-account-creation=true
+app.security.alerts.send-on-multiple-failed-unlocks=true
+app.security.alerts.failed-attempts-threshold=3
+app.security.alerts.rate-limit-threshold=5
+app.security.alerts.unlock-attempts-threshold=5
+
+# Email Security Alerts
+app.email.security-alerts-enabled=true
+app.email.security-alerts.enabled=true
+app.email.security-alerts.include-ip-address=true
+app.email.security-alerts.include-user-agent=false
+app.email.security-alerts.include-timestamp=true
+app.email.security-alerts.from-name=Security Team
+app.email.security-alerts.templates.use-html-templates=true
+app.email.security-alerts.templates.include-actionable-advice=true
+app.email.security-alerts.templates.include-support-contact=true
 
 # Cloudflare Configuration
 app.cloudflare.enabled=${CLOUDFLARE_ENABLED:true}
@@ -73,6 +105,8 @@ app.security.cors.allow-credentials=true
 
 # Logging Configuration
 logging.level.quest.gekko.wallet=INFO
+logging.level.quest.gekko.wallet.authentication.service.EmailService=DEBUG
+logging.level.quest.gekko.wallet.vault.service.VaultService=DEBUG
 logging.level.org.springframework.security=WARN
 logging.level.org.springframework.security.web.session=DEBUG
 logging.level.org.apache.catalina.session=DEBUG
@@ -89,6 +123,8 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 #server.servlet.session.cookie.same-site=strict
 #app.security.cors.allowed-origins=http://localhost:8080,http://127.0.0.1:8080
 #app.cloudflare.enabled=false
+#app.security.alerts.enabled=false
+#app.email.security-alerts-enabled=false
 #logging.level.quest.gekko.wallet=DEBUG
 
 # Production specific settings (when profile is 'prod')
@@ -96,8 +132,8 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 #spring.config.activate.on-profile=prod
 #server.servlet.session.cookie.secure=true
 #server.servlet.session.cookie.same-site=lax
-# Enable debug for troubleshooting in production if needed
-#logging.level.quest.gekko.wallet.authentication.service.EmailService=DEBUG
+#app.security.alerts.enabled=true
+#app.email.security-alerts-enabled=true
 
 # Render specific environment detection
 #---
