--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,4 +1,37 @@
-# src/test/resources/application-test.properties
+# Test Database Configuration
+spring.data.mongodb.uri=mongodb://localhost:27017/wallet_test
+spring.data.mongodb.auto-index-creation=true
 
-spring.data.mongodb.uri=${MONGO_URI}
-encryption.secret=${ENCRYPTION_SECRET}
+# Test Mail Configuration (Mock)
+spring.mail.host=localhost
+spring.mail.port=25
+spring.mail.username=test@example.com
+spring.mail.password=testpass
+
+# Application Test Settings
+app.name=WalletTest
+app.support.email=test@example.com
+
+# Verification Test Settings
+app.verification.code.length=6
+app.verification.code.expiry.minutes=10
+app.verification.max-attempts=5
+
+# Rate Limiting Test Settings
+app.security.rate-limit.email-send.per-hour=100
+app.security.rate-limit.email-send.per-minute=10
+app.security.rate-limit.code-verify.per-hour=200
+app.security.rate-limit.code-verify.per-minute=20
+
+# Vault Test Settings
+app.vault.max-passwords-per-user=1000
+app.vault.max-password-name-length=100
+
+# Security Test Settings
+app.security.failed-attempts.max=5
+app.security.account-lock.duration-minutes=30
+app.cloudflare.enabled=false
+
+# Logging for tests
+logging.level.quest.gekko.wallet=DEBUG
+logging.level.org.springframework.security=WARN
